[workspace]
members = [
    "crates/agent",
    "crates/env",
    "crates/gameboy",
    "crates/train",
    "crates/viewer",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
agent = { path = "crates/agent" }
env = { path = "crates/env" }
gameboy-rs = { path = "crates/gameboy", default-features = false }
